fix: comp/layout/flexbox incorrect nested gap

--- a/packages/void-ui/src/components/layout/flexbox/flexbox.scss
+++ b/packages/void-ui/src/components/layout/flexbox/flexbox.scss
@@ -108,6 +108,11 @@
       margin: rem(-$value / 2);
       > .#{class-comp('flexbox')} {
         padding: rem($value / 2);
+
+        &.#{class-prop('gap', $gap)} {
+          margin: 0;
+          padding: 0;
+        }
       }
     }
   }
